# memeocry-poc

./: .gitignore  README.md  main.py  pyproject.toml
memeocry/: cli.py  ocr.py
tests/: test_memeocry.py
